[metadata]
name = lafourche
version = 0.0.1
description = La Fourche
long_description = file: README.md
long_description_content_type = text/markdown
author = @encoreunefeuille & @gbouv
project_urls = https://github.com/gbouv/lafourche

[options]
packages = find:
python_requires = >=3.6

[flake8]
per-file-ignores = __init__.py:F401
exclude =
    .git,
    __pycache__,
    .venv,
    docs,
    build,
    dist
