[metadata]
name = lafourche
version = 0.0.1
description = La Fourche
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gbouv/lafourche
author = @encoreunefeuille & @gbouv

[options]
packages = find:
python_requires = >=3.10
install_requires =
    svgwrite

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
    pytest
    flake8
